# dbt-101

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  packages.yml  pyproject.toml  reqirements-dev.txt  requirements-dev.txt  requirements.txt
devtools/dbt_201/tools/: csv_read_timing.py  generate_csv.py
models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql
seeds/: trade_types.csv
